# android-libetpan-cmake-example

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/libetpan/sandbox/libetpancharsettest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: etpan-test.cpp
app/src/main/cpp/libetpan/src/data-types/: charconv.c
app/src/main/cpp/libetpan/src/low-level/imf/: mailimf.c
app/src/main/java/com/libetpan/sandbox/libetpancharsettest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/libetpan/sandbox/libetpancharsettest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
